# climate-epidemics

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Gemfile  README.md  _config.yml  app.html  environment.yml  index.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: run_tests.yml  update_lockfile.yml
_layouts/: default.html
climepi/: __init__.py  _core.py  _ensemble_stats.py  _geocoding.py  _version.py  _xcdat.py  app.py  core.py  utils.py  xr_accessor.py
climepi/app/: __init__.py  __main__.py  _app_classes_methods.py  _app_construction.py  _run_app.py  _small_app.py  cluster.py  run_app.py
climepi/climdata/: __init__.py  _base.py  _cesm.py  _data_getter_class.py  _examples.py  _isimip.py  _utils.py  xr_accessor.py
climepi/climdata/_example_registry_files/: isimip_capitals.txt  isimip_cities.txt  isimip_cities_daily.txt  isimip_cities_monthly.txt  isimip_euro_capitals.txt  isimip_london.txt  lens2_2020_2060_2100.txt  lens2_2020_2100_monthly.txt  lens2_2020_2100_monthly_one_realization.txt  lens2_2030_2060_2090.txt  lens2_cape_town.txt  lens2_cities.txt  lens2_europe_small.txt
climepi/climdata/cesm/: __init__.py  _cesm_base.py  _cesm_example.py  _download_data.py  _download_data_ncar_gateway.py  _examples.py  _examples_ncar_gateway.py  _get_data.py  base.py  cesm.py  import_data.py
climepi/core/: base.py
climepi/epimod/: __init__.py  _base_classes.py  _epimod_base.py  _examples.py  _model_classes.py  _model_fitting.py  base.py
climepi/epimod/_example_data/: mordecai_ae_aegypti_data.csv  mordecai_ae_albopictus_data.csv
climepi/epimod/ecolniche/: __init__.py  _ecolniche_base.py  base.py
climepi/epimod/example_data/: kaye_ae_aegypti_niche.nc
climepi/testing/: fixtures.py
climepi/tests/: test_climepi_core.py
data/catalogs/: cesm2-arise-sai-1.5.json  cesm2-waccm-ssp245.json
data/examples/isimip_cities/: isimip_monthly_2015_to_2100_Islamabad_ssp126_canesm5_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_miroc6_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp126_ukesm1-0-ll_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_canesm5_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_miroc6_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp370_ukesm1-0-ll_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_canesm5_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_miroc6_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Islamabad_ssp585_ukesm1-0-ll_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_canesm5_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_miroc6_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Los_Angeles_ssp126_ukesm1-0-ll_0.nc  (+169 more)
data/examples/isimip_cities_daily/: isimip_daily_2030_to_2100_Cape_Town_ssp126_canesm5_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_cnrm-cm6-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_cnrm-esm2-1_0.nc  (+147 more)
docs/: api-hidden.rst  api.rst  conf.py  environment.yml  gallery.rst  getting-started.rst  index.rst  usage.rst
docs/_static/: custom.css
docs/development/: index.rst
docs/examples/: hart_climate_uncertainty.ipynb  kaye_natural_climate_variability.ipynb  mordecai_ae_albopictus.ipynb
docs/getting-started/: app.rst  front-end-application.rst  index.rst  installation.rst  overview.rst
epiclim/: __init__.py
examples/: cape_town.ipynb  climdata.ipynb  data.csv  ecolniche.ipynb  example.ipynb  hart_climate_uncertainty.ipynb  isimip.ipynb  isimip_cities.ipynb  isimip_london.ipynb  kaye_ae_aegypti.ipynb  lens2_2030_2060_2090.ipynb  lens2_cape_town.ipynb  lens2_cities.ipynb  lens2_world.ipynb  mordecai_ae_aegypti.ipynb  mordecai_ae_albopictus.ipynb  suitability_models.ipynb  world_2020_2060_2100.ipynb
paper/: paper.bib  paper.md
tests/: __init__.py  fixtures.py  test_app_classes_methods.py  test_app_cluster.py  test_app_construction.py  test_app_init.py  test_climdata_base.py  test_climdata_cesm.py  test_climdata_data_getter_class.py  test_climdata_examples.py  test_climdata_isimip.py  test_climdata_utils.py  test_climepi_core.py  test_core.py  test_ensemble_stats.py  test_epimod_base_classes.py  test_epimod_examples.py  test_epimod_init.py  test_epimod_model_classes.py  test_epimod_model_fitting.py  test_geocoding.py  test_testing_fixtures.py  test_utils.py  test_xcdat.py
(+180 files in other folders)
