[build-system]
requires = ["setuptools>=61.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "climepi"
dynamic = ["version"]
authors = [{ name = "William Hart", email = "william.hart@maths.ox.ac.uk" }]
description = "Combining climate data and epidemiological models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/idm-oxford/climate-epidemics"
"Bug Tracker" = "https://github.com/idm-oxford/climate-epidemics/issues"

[tool.pixi.workspace]
channels = ["conda-forge", "microsoft"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
arviz-base = "*"
bottleneck = "*"
dask = "*"
datashader = "*"                 #dependency of hvplot but not always installed automatically
flox = "*"
geopy = "*"
geoviews = "*"
h5netcdf = "*"
hvplot = "*"
intake = "*"
intake-esm = "*"
kerchunk = ">=0.2.9" # https://github.com/fsspec/kerchunk/issues/566
nc-time-axis = "*"
numpy = "*"
pandas = "*"
panel = "*"
param = "*"
pooch = "*"
pydantic = "*"
pymc = "*"
requests = "*"
s3fs = ">=2021.4" #needed when using intake-esm to access CESM data on AWS server
scipy = "*"
siphon = "*"
tqdm = "*"
urllib3 = "*"
xarray = "!=2025.7" # https://github.com/pydata/xarray/issues/10536
xcdat = "*"

[tool.pixi.pypi-dependencies]
climepi = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
arviz-plots="*" # used in example notebooks
arviz-stats = "*" # used in example notebooks
ruff = "*"
mypy = "*"
scipy-stubs = "*"
pandas-stubs = "*"
types-requests = "*"
pytest = "*"
pytest-cov = "*"
jupyter_sphinx = "*"
nbsphinx = "*"
pydata-sphinx-theme = "*"
sphinx-autosummary-accessors = "*"
sphinx-copybutton = "*"
ipykernel = "*"
jupyter_bokeh = "*"
pip = "*"                          # needed for notebooks
versioneer = "==0.29"

[tool.pixi.feature.dev.pypi-dependencies]
pytest-playwright = "*" # conda version giving errors in Windows

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
py311 = { features = ["py311"], solve-group = "py311" }

[tool.pixi.tasks]
app = "python -m climepi.app"
lint = "ruff check"
lint-gh-actions = "ruff check --output-format=github"
type-check = "mypy climepi"
test = "pytest"
docs = "python -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs docs/_build/html"
docs-rtd = "python -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html"
remake-examples = "python -c 'from climepi.climdata._examples import _make_all_examples; _make_all_examples(force_remake=True)'"

[tool.setuptools.packages.find]
include = ["climepi*"]

[tool.setuptools.package-data]
"climepi.climdata._example_registry_files" = ["*.txt"]
"climepi.epimod._example_data" = ["*.nc", "*.csv"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "climepi/_version.py"
versionfile_build = "climepi/_version.py"
tag_prefix = "v"
parentdir_prefix = "climepi-"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=climepi --cov-config=pyproject.toml --cov-report=xml --junitxml=testreport.junit.xml"

[tool.coverage.run]
omit = ["climepi/_version.py", "climepi/app/__main__.py"]

[tool.ruff]
exclude = ["climepi/_version.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "D"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
check_untyped_defs = true
# ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["geopy.*","intake.*","pooch.*","pymc.*","siphon.*","xcdat.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["geoviews.*","holoviews.*","hvplot.*","param.*"]
ignore_missing_imports = true