[build-system]
requires = ["hatchling", "version-pioneer"]
build-backend = "hatchling.build"

[project]
name = "climepi"
dynamic = ["version"]
authors = [{ name = "William Hart", email = "william.hart@maths.ox.ac.uk" }]
description = "Combining climate data and epidemiological models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/idm-oxford/climate-epidemics"
"Bug Tracker" = "https://github.com/idm-oxford/climate-epidemics/issues"

[tool.pixi.workspace]
channels = ["conda-forge", "microsoft"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
arviz-base = "*"
bottleneck = "*"
dask = "*"
datashader = "*"                 #dependency of hvplot but not always installed automatically
flox = "*"
geopy = "*"
geoviews = "*"
h5netcdf = "*"
hvplot = "*"
intake = "*"
intake-esm = "*"
kerchunk = ">=0.2.9" # https://github.com/fsspec/kerchunk/issues/566
nc-time-axis = "*"
numpy = "*"
pandas = "*"
panel = "*"
param = "*"
pooch = "*"
pydantic = "*"
pymc = "*"
requests = "*"
s3fs = ">=2021.4" #needed when using intake-esm to access CESM data on AWS server
scipy = "*"
siphon = "*"
tqdm = "*"
typing-extensions = "*"
urllib3 = "*"
xarray = "!=2025.7" # https://github.com/pydata/xarray/issues/10536
xcdat = "*"

[tool.pixi.pypi-dependencies]
climepi = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
arviz-plots="*" # used in example notebooks
arviz-stats = "*" # used in example notebooks
ruff = "*"
mypy = "*"
scipy-stubs = "*"
pandas-stubs = "*"
types-requests = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "<9.0.0"  # https://github.com/xarray-contrib/sphinx-autosummary-accessors/issues/165
jupyter_sphinx = "*"
nbsphinx = "*"
pydata-sphinx-theme = "*"
sphinx-autosummary-accessors = "*"
sphinx-copybutton = "*"
ipykernel = "*"
jupyter_bokeh = "*"
pip = "*"                          # needed for notebooks

[tool.pixi.feature.dev.pypi-dependencies]
pytest-playwright = "*" # conda version giving errors in Windows
version-pioneer = "*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }
py313 = { features = ["py313", "dev"], solve-group = "py313" }
py314 = { features = ["py314", "dev"], solve-group = "py314" }

[tool.pixi.tasks]
app = "python -m climepi.app"
lint = "ruff check"
lint-gh-actions = "ruff check --output-format=github"
type-check = "mypy climepi"
test = "pytest"
docs = "sphinx-build -T -b html -d docs/_build/doctrees -D language=en docs docs/_build/html"
docs-rtd = "sphinx-build -T -b html -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html"
remake-examples = "python -c 'from climepi.climdata._examples import _make_all_examples; _make_all_examples(force_remake=True)'"

[tool.hatch.build.targets.sdist]
packages = ["climepi"]

[tool.hatch.build.targets.wheel]
packages = ["climepi"]

[tool.hatch.version]
source = "version-pioneer"

[tool.hatch.build.hooks.version-pioneer]
# section is empty because we read config from `[tool.version-pioneer]` section.

[tool.version-pioneer]
versionscript = "climepi/_version.py"
versionfile-sdist = "climepi/_version.py"
versionfile-wheel = "climepi/_version.py"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=climepi --cov-config=pyproject.toml --cov-report=xml --junitxml=testreport.junit.xml"

[tool.coverage.run]
omit = ["climepi/_version.py", "climepi/app/__main__.py"]

[tool.ruff]
exclude = ["climepi/_version.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "D"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["geopy.*","intake.*","pooch.*","pymc.*","siphon.*","version_pioneer.*","xcdat.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["geoviews.*","holoviews.*","hvplot.*","param.*"]
ignore_missing_imports = true
